tests/snapshots/validation-resources-calibration.snap
---
source: tests/harness/case.rs
expression: "validate_fit(eft_fit, skills, edit)"
---
ship = resource Calibration 600.000000 of 400.000000
