tests/snapshots/validation-slots-slot_taken.snap
---
source: tests/harness/case.rs
expression: "validate_fit(eft_fit, skills, edit)"
---
low_1/Damage Control II = slot_taken
low_1/Gyrostabilizer II = slot_taken
