tests/snapshots/validation-slots-wrong_rack.snap
---
source: tests/harness/case.rs
expression: "validate_fit(eft_fit, skills, edit)"
---
high_1/Damage Control II = wrong_slot Low
